[Fix] Linespacing fixed

--- a/public/style.css
+++ b/public/style.css
@@ -92,7 +92,7 @@ main.container {
   height: 100%;
   margin: 0;
   align-items: top;
-  font-size: 240px;
+  font-size: 8vw;
 }
 
 textarea {
@@ -111,7 +111,7 @@ textarea {
   color: #fff;
   text-align: right;
   justify-content: flex-end;
-  margin-top: -2px;
+  margin-top: -.95vw;
   padding-right: 18px;
   overflow: scroll;
   scrollbar-width: 10px;
